--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-  background: #ddd;
+  background: #81c0de;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -27,6 +27,7 @@ body {
 }
 
 .toolbar {
+  width: 100%;
   padding: 16px;
   background: #eee;
 }
